Fix: Not showing user homework for not logged in users Not showing user homework when there is no username in URL

--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -11,6 +11,11 @@ img {
   position: relative;
 }
 
+pre code {
+  background: #ddd;
+  padding: 3px;
+}
+
 pre {
   white-space: pre-wrap;
   word-break: normal;
